--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -7,3 +7,19 @@ bReplaceBlueprintWithClass= true
 bDontLoadBlueprintOutsideEditor= true
 bBlueprintIsNotBlueprintType= true
 
+[/Script/UnrealEd.EditorProjectAppearanceSettings]
+bDisplayUnits=True
+bDisplayUnitsOnComponentTransforms=True
+-DistanceUnits=EUnit::Centimeters
++DistanceUnits=Centimeters
+-MassUnits=EUnit::Kilograms
++MassUnits=Kilograms
+-TimeUnits=EUnit::Seconds
+-TimeUnits=EUnit::Minutes
++TimeUnits=Seconds
++TimeUnits=Minutes
+AngleUnits=Degrees
+SpeedUnits=MetersPerSecond
+TemperatureUnits=Celsius
+ForceUnits=Newtons
+
